[package]
name = "graviton"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = { version = "0.15.4", features = ["blas"] }
ndarray-linalg = { version = "0.14.1", features = ["openblas-system"] }
num = "0.4.0"
rust-spice = { path = "../rust-spice/rust-spice" }