[package]
name = "graviton"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev.package."*"]
opt-level = 3

[dependencies]
ndarray = { version = "0.15.4" }
num = "0.4.0"
rust-spice = { path = "../rust-spice/rust-spice" }
bevy = { version = "0.5.0", features = ["jpeg"] }
glam = "0.20.1"